# async-cv

./: README.md  nginx.conf  pyproject.toml
docs/: diagram.py
src/: main.py
src/api/: routes.py  schemas.py
src/celery_app/: celery.py  tasks.py  worker.py
src/core/: config.py  preprocessing.py
src/models/: base.py  face_detector.py  image_classifier.py  object_detector.py
