[project]
name = "async-cv"
version = "0.1.0"
description = "Async CV Inference System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "amqp>=5.3.1",
    "billiard>=4.2.1",
    "celery>=5.5.2",
    "diagrams>=0.24.4",
    "fastapi[standard]>=0.115.12",
    "graphviz>=0.20.3",
    "kombu>=5.5.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "ruff>=0.11.12",
    "vine>=5.1.0",
]
